--- a/public/src/assets/css/destinations.css
+++ b/public/src/assets/css/destinations.css
@@ -1,5 +1,5 @@
 .destinations {
-  background-image: url(../destination/background-destination-mobile.jpg);
+  background-image: url(/public/src/assets/Images/destination/background-destination-mobile.jpg);
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -114,7 +114,7 @@
 
 @media (min-width: 768px) {
   .destinations {
-    background-image: url(../destination/background-destination-tablet.jpg);
+    background-image: url(/public/src/assets/Images/destination/background-destination-tablet.jpg);
   }
   .container .destinations--section {
     width: 100%;
@@ -158,7 +158,7 @@
   .destinations {
     max-width: 1440px;
     box-shadow: 0 0 5em var(--grey);
-    background-image: url(../destination/background-destination-desktop.jpg);
+    background-image: url(/public/src/assets/Images/destination/background-destination-desktop.jpg);
   }
   .Moon {
     box-shadow: -2rem 0 3em var(--grey), 2rem 0 3em var(--grey-op);
