--- a/public/src/assets/css/nav.scss
+++ b/public/src/assets/css/nav.scss
@@ -12,7 +12,7 @@ nav {
     .mobile-menu-btn {
         width: 30px;
         height: 25px;
-        background-image: url(../shared/icon-hamburger.svg);
+        background-image: url(/public/src/assets/Images/shared/icon-hamburger.svg);
         background-size: contain;
         background-repeat: no-repeat;
         outline: none;
@@ -39,7 +39,7 @@ nav {
         .close-menu-btn {
             width: 30px;
             height: 30px;
-            background-image: url(../shared/icon-close.svg);
+            background-image: url(/public/src/assets/Images/shared/icon-close.svg);
             background-repeat: no-repeat;
             background-size: cover;
             background-color: transparent;
