--- a/public/src/assets/css/technology.scss
+++ b/public/src/assets/css/technology.scss
@@ -1,5 +1,5 @@
 .tech {
-    background-image: url(../technology/background-technology-mobile.jpg);
+    background-image: url(/public/src/assets/Images/technology/background-technology-mobile.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -112,7 +112,7 @@
 
 @media (min-width: 768px) {
     .tech {
-        background-image: url(../technology/background-technology-tablet.jpg);
+        background-image: url(/public/src/assets/Images/technology/background-technology-tablet.jpg);
     }
     
     .container {
@@ -183,7 +183,7 @@
     .tech {
         max-width: 1440px;
         box-shadow: 0 0 5em var(--grey);
-        background-image: url(../technology/background-technology-desktop.jpg);
+        background-image: url(/public/src/assets/Images/technology/background-technology-desktop.jpg);
     }
     
     .container {
